--- a/src/qt/forms/multisenddialog.ui
+++ b/src/qt/forms/multisenddialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>MultiSendDialog</class>
+ <widget class="QDialog" name="MultiSendDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
