--- a/src/qt/forms/multisenddialog.ui
+++ b/src/qt/forms/multisenddialog.ui
@@ -11,14 +11,17 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>MultiSend</string>
   </property>
   <widget class="QLabel" name="label">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>451</width>
+     <width>521</width>
      <height>61</height>
     </rect>
    </property>
@@ -76,15 +79,27 @@
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>489</x>
+     <x>460</x>
      <y>360</y>
-     <width>131</width>
+     <width>149</width>
      <height>80</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <property name="leftMargin">
+       <number>10</number>
+      </property>
+      <property name="topMargin">
+       <number>10</number>
+      </property>
+      <property name="rightMargin">
+       <number>10</number>
+      </property>
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
       <item>
        <widget class="QLabel" name="MSStakingStatusLabel">
         <property name="text">
@@ -158,7 +173,7 @@
     <rect>
      <x>20</x>
      <y>360</y>
-     <width>371</width>
+     <width>401</width>
      <height>91</height>
     </rect>
    </property>
@@ -240,13 +255,10 @@
         <property name="text">
          <string/>
         </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>GitHub/Bulwark/src/qt/res/icons/address-book.png</normaloff>GitHub/Bulwark/src/qt/res/icons/address-book.png</iconset>
-        </property>
-        <property name="shortcut">
-         <string>Alt+A</string>
-        </property>
+		   <property name="icon">
+            <iconset resource="../pivx.qrc">
+             <normaloff>:/icons/edit</normaloff>:/icons/edit</iconset>
+           </property>
         <property name="autoDefault">
          <bool>false</bool>
         </property>
