--- a/src/qt/forms/multisenddialog.ui
+++ b/src/qt/forms/multisenddialog.ui
@@ -173,7 +173,7 @@
     <rect>
      <x>20</x>
      <y>360</y>
-     <width>271</width>
+     <width>321</width>
      <height>91</height>
     </rect>
    </property>
@@ -248,6 +248,12 @@
       </item>
       <item>
        <widget class="QPushButton" name="addressBookButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
