--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -58,7 +58,7 @@
              <widget class="QLabel" name="BalanceTitle">
               <property name="font">
                <font>
-                <pointsize>15</pointsize>
+                <pointsize>8</pointsize>
                 <weight>75</weight>
                 <italic>false</italic>
                 <bold>true</bold>
@@ -120,7 +120,7 @@
              <widget class="QLabel" name="labelImmatureText">
               <property name="font">
                <font>
-                <pointsize>15</pointsize>
+                <pointsize>8</pointsize>
                </font>
               </property>
               <property name="text">
@@ -244,7 +244,8 @@
              <widget class="QLabel" name="labelPendingText">
               <property name="font">
                <font>
-                <pointsize>15</pointsize>
+                <pointsize>8</pointsize>
+                <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
@@ -331,7 +332,7 @@
              <widget class="QLabel" name="labelTotalText">
               <property name="font">
                <font>
-                <pointsize>15</pointsize>
+                <pointsize>8</pointsize>
                </font>
               </property>
               <property name="text">
@@ -394,7 +395,9 @@
              <widget class="QLabel" name="labelBalanceText">
               <property name="font">
                <font>
-                <pointsize>15</pointsize>
+                <pointsize>8</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
                </font>
               </property>
               <property name="text">
@@ -1191,7 +1194,7 @@
             <widget class="QLabel" name="ObfuscationTitle">
              <property name="font">
               <font>
-               <pointsize>15</pointsize>
+               <pointsize>8</pointsize>
                <weight>75</weight>
                <bold>true</bold>
               </font>
