Changed border of Scroll Area

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -329,6 +329,10 @@ QHeaderView::section:last {
 	background: transparent;
 	border: 1px solid #333
 }
+QDialog#MultiSendDialog QScrollArea{
+	border: 1px solid #0;
+	background-color: #ffffff	
+}
 QTableView::item {
 	background-color: #fcfcfc;
 	font-size: 12px
