--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -449,6 +449,12 @@
             </item>
             <item row="5" column="2">
              <widget class="Line" name="lineWatchOnlyBalance">
+			 <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>1</height>
+               </size>
+              </property>
               <property name="frameShadow">
                <enum>QFrame::Plain</enum>
               </property>
