--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -711,6 +711,7 @@ QWidget .QFrame#frame_CombinedBalances {
 	background-color: #ffffff
 }
 QWidget .QFrame#frame_RecentTransactions {
+	min-width: 400px;
 	background-color: #ffffff
 }
 QWidget .QFrame#frame_Balances > .QLabel {
